# labelme_setup_memo

./: pyproject.toml
sample/: DSC00033.json
